[gd_scene load_steps=2 format=3 uid="uid://c6jn0nrql08fw"]

[ext_resource type="Script" uid="uid://dhdosf4g2guxu" path="res://UI/pause_menu.gd" id="1_pause_menu"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 100
script = ExtResource("1_pause_menu")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
z_index = 12
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
z_index = 12
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spacer1" type="Control" parent="Panel/VBoxContainer"]
z_index = 12
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="PausedLabel" type="Label" parent="Panel/VBoxContainer"]
z_index = 12
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 42
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="Panel/VBoxContainer"]
z_index = 12
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ContinueButton" type="Button" parent="Panel/VBoxContainer"]
z_index = 12
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Continue"

[node name="Spacer3" type="Control" parent="Panel/VBoxContainer"]
z_index = 12
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="MenuButton" type="Button" parent="Panel/VBoxContainer"]
z_index = 12
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Return to Menu"

[node name="Spacer4" type="Control" parent="Panel/VBoxContainer"]
z_index = 12
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
